# subscription-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20fb5ceb0ab9_initial_schema.py  a1b2c3d4e5f6_debt_review_flow.py  b2c3d4e5f6a7_uq_transactions_subscription_period.py
app/: __main__.py  bot.py  config.py  logging_setup.py  main.py
app/database/: engine.py  session.py
app/filters/: __init__.py  navigation.py
app/handlers/: __init__.py  cancel.py  charges.py  debts.py  one_time_payments.py  start.py  (+3 more)
docs/: CHARGE_IDEMPOTENCY.md  DECISIONS.md  PRODUCT_RULES.md  PROJECT_CONTEXT.md  ROADMAP.md  STATUS.md  TASKS.md
tests/: conftest.py  test_billing_dates.py  test_cb_friend_paid.py  test_charge_actual_prompt.py  test_charge_card.py  test_charge_idempotency.py  test_charge_ownership.py  test_charges.py  test_config.py  test_currency.py  test_debt_calculator.py  test_debt_deep_link_security.py  test_debt_mutation_ownership.py  test_debt_statuses.py  test_debt_transition_security.py  test_friend_ownership.py  test_fsm_navigation.py  test_logging_setup.py  test_money.py  test_mutation_callback_ownership.py  test_one_time_atomicity.py  test_payment_method_ownership.py  test_reference_data_mutation_ownership.py  test_remaining_ownership.py  test_reminders.py  test_sqlite_foreign_keys.py  test_subscription_friends_edit.py  test_subscription_mutation_ownership.py  test_subscriptions_service.py  test_ui_kit.py  test_ui_presentation.py  test_wipe_data.py
(+57 files in other folders)
